public class Main {

    public static void main(String[] args) {

        Controller control = new Controller(); //New object of our Controller class

        control.UI(); //calling the UI method from Controller class

    }
}
