@startuml
Abstract Tournament
class Controller
class Team
class Match
class Bracket
class Player
class Main
class Knockout
class Group

Main *-- Controller
Controller *-- Tournament
Tournament <|-- Knockout
Tournament <|-- Group
Knockout *-- Bracket
Group *-- Match
Bracket *-- Team
Bracket *-- Match
Team *-- Player
Match *-- Team

Main : + control.UI()

Controller : + void UI()
Controller : + void createTournament()
Controller : + void startTournament()
Controller : - final static int CURRENT_YEAR
Controller : - final static int TOURNAMENT_START_TIME
Controller : - private ArrayList<Team>participatingTeams
Controller : - private String tournamentName
Controller : - Scanner scan

Tournament : + void runTournament()
Tournament : - private String tournamentWinner
Tournament : - private String tournamentName
Tournament : - private int tournamentStartTime
Tournament : - private ArrayList<Team> teams
Tournament : - private ArrayList<Match> matches
Tournament : + void saveTournamentData()
Tournament : + void loadTournamentData()
Tournament : + Override toString()
Tournament : - Bracket connectedBracket

Knockout : + Override runTournament()

Group : + Override runTournament()

Bracket : - private ArrayList<Team>teams
Bracket : - private ArrayList<Match>matches
Bracket : - private ArrayList<Match>temMatches
Bracket : - private int numberParticipatingTeams
Bracket : - private int roundNumber
Bracket : + void randomSeeding()
Bracket : + void startMatch()
Bracket : + void nextRound()
Bracket : + void matchHistory()
Bracket : + void nextMatchReminder(int currentMatch)

Team : - private String teamName
Team : - private ArrayList<Player>players
Team : + void addPlayer()
Team : + void removePlayer()
Team : + Override toString()

Match : - private String gameTime
Match : + void matchWinner()
Match : + Team randomMatchWinner()
Match : + Override toString()
Match : - private int teamAScore
Match : - private int teamBScore
Match : - private Team teamWinner
Match : - private Team teamA
Match : - private Team teamB

Player : - private String name
Player : + Override toString()


@enduml